--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "better-scroll": "^2.2.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "swiper": "^6.5.0",
+    "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
